force-app/main/default/objects/Child_Quote_Line__c/Child_Quote_Line__c.object-meta.xml
<CustomObject>
    <description>This object is used to display services summary on order form</description>
    <label>Child Quote Line</label>
    <nameField>
        <label>Child Quote Line Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Child Quote Lines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>