force-app/main/default/objects/Child_Quote_Line__c/fields/Net_Fees_2_Decimal_Places__c.field-meta.xml
<CustomField>
    <fullName>Net_Fees_2_Decimal_Places__c</fullName>
    <description>For PdF purposes only</description>
    <formula>FLOOR(Net_Fees__c * 100) / 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Fees 2 Decimal Places</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>