force-app/main/default/objects/Child_Quote_Line__c/fields/Net_Fees__c.field-meta.xml
<CustomField>
    <fullName>Net_Fees__c</fullName>
    <label>Net Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>