force-app/main/default/objects/Child_Quote_Line__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Child Quote Lines</relationshipLabel>
    <relationshipName>Child_Quote_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>